# AgenticOS

./: .gitignore  ACTION_PLAN.md  AGENTS.md  ARCHITECTURE.md  CRITICITY_TO_FIX.md  Cargo.toml  INFERENCE_BACKEND_MIGRATION_PLAN.md  LOCAL_BACKEND_QUALITY_ANALYSIS.md  M47_IMPLEMENTATION_PLAN.md  NEW_GUI_PLAN.md  NEXT_FIX.md  OPERATIONS.md  REFACTORING_PLAN.md  REPORT.md  ROADMAP.md  THINKING_FIX.md  THINKING_RUNTIME_REDESIGN.md  TOOL_EXECUTION_FIX.md  TOOL_INVOCATION_DISPATCH_FIX.md  TOOL_LOCAL_INVOCATION_PROTOCOL_ANALYSIS.md  TOOL_PIPELINE_CLEANUP_PLAN.md  agenticos.toml  kernel_tcp_infer.sh
crates/agentic-kernel/: Cargo.toml
crates/agentic-kernel/src/: agent_capabilities.rs  agent_prompt.rs  checkpoint.rs  checkpoint_tests.rs  config.rs  errors.rs  events.rs  inference_worker.rs  lib.rs  main.rs  process.rs  prompting.rs  prompting_tests.rs  protocol.rs  protocol_tests.rs  scheduler.rs  scheduler_tests.rs  text_invocation.rs  tool_registry.rs  tool_registry_tests.rs
crates/agentic-kernel/src/accounting/: mod.rs
crates/agentic-kernel/src/audit/: mod.rs
crates/agentic-kernel/src/backend/: diagnostics.rs  external_llamacpp.rs  http.rs  http_tests.rs  local.rs  mod.rs  remote_adapter.rs  remote_adapter_tests.rs  tests.rs
crates/agentic-kernel/src/commands/: checkpoint_cmd.rs  checkpoint_cmd_tests.rs  context.rs  core_dump.rs  exec.rs  memory_cmd.rs  misc.rs  mod.rs  model.rs  models.rs  orchestration_cmd.rs  parsing.rs  parsing_tests.rs  process_cmd.rs  runtime.rs  workflow_control.rs
crates/agentic-kernel/src/config/: environment.rs  mod.rs  models.rs  parser.rs
crates/agentic-kernel/src/core_dump/: capture.rs  checkpoints.rs  mod.rs  models.rs  package.rs  replay.rs  replay_branch.rs  retention.rs  tool_history.rs  triggers.rs
crates/agentic-kernel/src/diagnostics/: audit.rs  metrics.rs  mod.rs  tracing.rs
crates/agentic-kernel/src/engine/: lifecycle.rs  lifecycle_tests.rs  mod.rs  slot_manager.rs  tokenizer.rs
crates/agentic-kernel/src/invocation/: text.rs
crates/agentic-kernel/src/kernel/: bootstrap.rs  checkpointing.rs  event_loop.rs  mod.rs  recovery.rs  recovery_tests.rs  server.rs  shutdown.rs  wakers.rs
crates/agentic-kernel/src/mcp/: bridge.rs  client.rs  http_bridge.rs  jsonrpc.rs  mod.rs  models.rs  roots.rs  status.rs
crates/agentic-kernel/src/memory/: core.rs  core_tests.rs  mod.rs  residency.rs  swap.rs  swap_io.rs  types.rs
crates/agentic-kernel/src/model_catalog/: cache.rs  discovery.rs  driver.rs  formatting.rs  metadata.rs  mod.rs  remote_catalog.rs  tests.rs  (+2 more)
crates/agentic-kernel/tests/: e2e.rs
(+704 files in other folders)
