[package]
name = "agentic_os_kernel"
version = "0.5.0"
edition = "2021"

[dependencies]
mio = { version = "1.0", features = ["os-poll", "net"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
minijinja = "2.12"
# IL MOTORE
candle-core = "0.9.1" 
candle-transformers = "0.9.1"
tokenizers = "0.22.2"
# candle-nn = "0.6.0" # Ci servirà per i layer neurali dopo
byteorder = "1.5" # Utile per manipolare byte grezzi
anyhow = "1.0" # Gestione errori più pulita per i file
hf-hub = "0.4.3"
getrandom = "0.2"

[dev-dependencies]
jsonschema = "0.18"