[workspace]
members = [
    "crates/agentic-control-models",
    "crates/agentic-kernel",
    "crates/agentic-kernel-macros",
    "crates/agentic-kernel-bin",
    "crates/agentic-protocol",
    "apps/agent-workspace/src-tauri",
]
resolver = "2"

[workspace.package]
version = "0.5.0"
edition = "2021"
