[package]
name = "agentic-kernel"
version.workspace = true
edition.workspace = true

[lib]
name = "agentic_kernel"
path = "src/lib.rs"

[dependencies]
agentic-control-models = { path = "../agentic-control-models" }
agentic-kernel-macros = { path = "../agentic-kernel-macros" }
agentic-protocol = { path = "../agentic-protocol" }
mio = { version = "1.0", features = ["os-poll", "net"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = { version = "0.8", features = ["derive"] }
toml = "0.8"
minijinja = "2.12"
tokenizers = "0.22.2"
byteorder = "1.5"
anyhow = "1.0"
hf-hub = "0.4.3"
getrandom = "0.2"
ureq = { version = "2.12", features = ["json"] }
rusqlite = { version = "0.32", features = ["bundled"] }
jsonschema = "0.18"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

[dev-dependencies]
